change title of review children

--- a/docs/review/1.md
+++ b/docs/review/1.md
@@ -1,10 +1,15 @@
 ---
 layout: default
-title: "Attentive Statistics Pooling for Deep Speaker Embedding"
+title: "Attentive Statistics Pooling"
 parent: "Paper review"
 nav_order: 1
 permalink: /docs/review/1
 ---
+
+
+#Attentive Statistics Pooling for Deep Speaker Embedding
+
+####Koji Okabe, Takafumi Koshinaka, Koichi Shinoda
 
 ### ▶ Abstract
 - <span style="background-color:#fff6dd">**Text-independent**(문장 독립 : 발화 내용이 동일하지 하지 않음)한 **Speaker Verification**(화자 검증 : 등록된 화자인지 아닌지 판단, SV)에서 **Deep speaker embedding을 위한 attentive statistics pooling** 제안</span>
