--- a/docs/review/3.md
+++ b/docs/review/3.md
@@ -1,10 +1,14 @@
 ---
 layout: default
-title: "Generative Adversarial Speaker Embedding Networks for Domain Robust End-to-End Speaker Verification"
+title: "Domain Robust"
 parent: "Paper review"
 nav_order: 3
 permalink: /docs/review/3
 ---
+
+#Generative Adversarial Speaker Embedding Networks for Domain Robust End-to-End Speaker Verification
+
+####Gautam Bhattacharya, Joao Monteiro, Jahangir Alam, Patrick Kenny
 
 ### ✏ Abstract 🔎
 - GANs를 이용한 domain invariant speaker embedding을 위한 새로운 접근 방식 제안
