--- a/docs/review/4.md
+++ b/docs/review/4.md
@@ -1,10 +1,14 @@
 ---
 layout: default
-title: "Generalized End to End Loss For Speaker Verification"
+title: "GE2E"
 parent: "Paper review"
 nav_order: 4
 permalink: /docs/review/4
 ---
+
+#Generalized End to End Loss For Speaker Verification
+
+####Li Wan, Quan Wang, Alan Papir, Ignacio Lopez Moreno
 
 ### ✏ Abstract 🔎
 - 새로운 loss function(Generalized End-to-End, GE2E) 제안
