--- a/docs/review/6.md
+++ b/docs/review/6.md
@@ -1,11 +1,15 @@
 ---
 layout: default
-title: "Metric Learning for Keyword Spotting"
+title: "Metric for Keyword spotting"
 parent: "Paper review"
 nav_order: 6
 permalink: /docs/review/6
 use_math: true
 ---
+
+#Metric Learning for Keyword Spotting
+
+####Jaesung Huh, Minjae Lee, Heesoo Heo, Seongkyu Mun, Joon Son Chung
 
 ### ✏ Abstract 🔎
 
