--- a/docs/review/7.md
+++ b/docs/review/7.md
@@ -1,15 +1,19 @@
 ---
 layout: default
-title: "Cross attentive pooling for speaker verification"
+title: "Cross Attentive Pooling"
 parent: "Paper review"
 nav_order: 7
 permalink: /docs/review/7
 use_math: true
 ---
 
+#Cross attentive pooling for speaker verification
+
+####Seong Min Kye, Yoohwan Kwon, Joon Son Chung
+
 ### ✏ Abstract 🔎
 
-- **목표 : 'in the wild' video와 관련없는 signal을 포함하는 utterance를 사용하는 TI-SV(Text-Independent Speaker Verification)
+- **목표 : 'in the wild' video와 관련없는 signal을 포함하는 utterance를 사용하는 TI-SV(Text-Independent Speaker Verification)**
 - SV는 pair-wise 문제(등록과 테스트 쌍을 비교), 기존의 embedding 추출은 instance-wise 문제(각 utterance에 대한 embedding을 추출하여 서로 비교)
 - <span style="background-color:#ffed54">본 논문에서는 reference-query pair 전체의 context 정보를 활용하여 **pair-wise 문제에 가장 discriminative한 utterance-level의 embedding 추출을 생성**하는 **CAP(Cross Attention Pooling)**을 제안</span>
 - VoxCeleb dataset을 사용하고, 다른 pooling 방법과 비교하여 우수한 성능을 보였음
