--- a/docs/review/6.md
+++ b/docs/review/6.md
@@ -7,9 +7,10 @@ permalink: /docs/review/6
 use_math: true
 ---
 
-# Metric Learning for Keyword Spotting
+# **Metric Learning for Keyword Spotting**
 
 #### Jaesung Huh, Minjae Lee, Heesoo Heo, Seongkyu Mun, Joon Son Chung
+
 
 ### ✏ Abstract 🔎
 
