--- a/docs/review/2.md
+++ b/docs/review/2.md
@@ -7,9 +7,10 @@ author: Ara Bae
 comments: True
 ---
 
-# End-to-End DNN based Speaker Recognition Inspired by i-vector and PLDA
+# **End-to-End DNN based Speaker Recognition Inspired by i-vector and PLDA**
 
 #### Johan Rohdin, Anna Silnova , Mireia Diez, Oldrich Plchot , Pavel Matejka , Lukas Burget
+
 
 ### ▶ Abstract
 - 최근 text-dependent뿐만 아니라 짧은 발화에서의 text-independent task에서도 DNN 기반 End-to-End 시스템의 경쟁력을 입증
