--- a/docs/review/7.md
+++ b/docs/review/7.md
@@ -7,9 +7,10 @@ permalink: /docs/review/7
 use_math: true
 ---
 
-# Cross attentive pooling for speaker verification
+# **Cross attentive pooling for speaker verification**
 
 #### Seong Min Kye, Yoohwan Kwon, Joon Son Chung
+
 
 ### ✏ Abstract 🔎
 
