--- a/docs/PRML/1.md
+++ b/docs/PRML/1.md
@@ -4,6 +4,7 @@ title: "Chapter1. Introduction"
 parent: "PRML"
 nav_order: 1
 permalink: /docs/prml/1
+comments: true
 ---
 
 # Chapter1. Introduction
