modify disqus position

--- a/docs/review/2.md
+++ b/docs/review/2.md
@@ -4,7 +4,7 @@ title: "Inspired by i-vector/PLDA"
 parent: "Paper review"
 nav_order: 2
 author: Ara Bae
-comments: True
+comments: true
 ---
 
 # **End-to-End DNN based Speaker Recognition Inspired by i-vector and PLDA**
