--- a/docs/review/3.md
+++ b/docs/review/3.md
@@ -4,6 +4,7 @@ title: "Domain Robust"
 parent: "Paper review"
 nav_order: 3
 permalink: /docs/review/3
+comments: true
 ---
 
 # **Generative Adversarial Speaker Embedding Networks for Domain Robust End-to-End Speaker Verification**
