--- a/docs/review/4.md
+++ b/docs/review/4.md
@@ -4,6 +4,7 @@ title: "GE2E"
 parent: "Paper review"
 nav_order: 4
 permalink: /docs/review/4
+comments: true
 ---
 
 # **Generalized End to End Loss For Speaker Verification**
