--- a/docs/review/5.md
+++ b/docs/review/5.md
@@ -4,6 +4,7 @@ title: "Attention for TD-SV"
 parent: "Paper review"
 nav_order: 5
 permalink: /docs/review/5
+comments: true
 ---
 
 # **Attention-based Models For Text-dependent Speaker Verification**
