--- a/docs/review/6.md
+++ b/docs/review/6.md
@@ -5,6 +5,7 @@ parent: "Paper review"
 nav_order: 6
 permalink: /docs/review/6
 use_math: true
+comments: true
 ---
 
 # **Metric Learning for Keyword Spotting**
