--- a/docs/review/7.md
+++ b/docs/review/7.md
@@ -5,6 +5,7 @@ parent: "Paper review"
 nav_order: 7
 permalink: /docs/review/7
 use_math: true
+comments: true
 ---
 
 # **Cross attentive pooling for speaker verification**
