modify markdown eq

--- a/docs/review/7.md
+++ b/docs/review/7.md
@@ -76,8 +76,10 @@ comments: true
 - 서로 다른 화자 N명마다 M개의 발화 포함
 
 $$
-S = {(x_i, y_i)}^{N\times1}_{i=1},
-Q = {(\tilde{x_i}, \tilde{y_i})}^{N\times(M-1)}_{i=1}
+\begin{align}
+S &= {(x_i, y_i)}^{N \times 1}_{i=1}, \\
+Q &= {(\tilde{x_i}, \tilde{y_i})}^{N \times (M-1)}_{i=1}
+\end{align}
 $$
 
 > support set은 각 화자마다 1개의 발화를 사용하고, query set은 나머지 발화($2 \leq i \leq M$)를 사용
