modify br tag and alt of img

--- a/docs/review/8.md
+++ b/docs/review/8.md
@@ -54,13 +54,13 @@ comments: true
 **✔ Adversarial Learning**
 - minmax loss function이 교대로 최적화 과정을 수행 (두 모델의 loss가 같아지는 상태가 될 때까지)
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101442311-735b3b80-395e-11eb-87da-130ab93a5834.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101442311-735b3b80-395e-11eb-87da-130ab93a5834.png" alt="img"/></center>
 
 - Gradients diminishing, exploding 문제로 훈련하기 어려운데 이를 Wasserstein GAN(WGAN)에서 수학적으로 다루었음
 - Discriminator는 좋은 $𝑓_𝑤$를 찾도록 설계되었으며, 새로운 loss function은 Wasserstein 거리를 측정하도록 구성
 
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101442322-76eec280-395e-11eb-8f23-77c965f91d6a.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101442322-76eec280-395e-11eb-8f23-77c965f91d6a.png" alt="img"/></center>
 
 
 ---
@@ -70,7 +70,7 @@ comments: true
 
 - 제안하는 전급 방식은 아래의 구조와 같음
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101442513-ccc36a80-395e-11eb-923b-4ca1aa2ac183.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101442513-ccc36a80-395e-11eb-923b-4ca1aa2ac183.png" alt="img"/></center>
 
 > $𝑥, 𝑦$ : 같은 speaker의 각각 짧고 긴 발화에 해당하는 D차원의 G-vector
 >
@@ -84,25 +84,25 @@ comments: true
 >
 > $𝐷_𝑤$ : Wasserstein discriminator
 
-</br>
+<br/>
 
 - 제안된 방법의 **핵심적인 task**는 **discriminability이 향상된 embedding을 학습**하는 것
 
 <span style="background-color:#E4C4F0">**✔ loss functions**</span>
 
 - **WGAN loss**
-<center><img src="https://user-images.githubusercontent.com/46676700/101443118-02b51e80-3960-11eb-86ce-40b44aed35fc.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443118-02b51e80-3960-11eb-86ce-40b44aed35fc.png" alt="img"/></center>
 
-</br>
+<br/>
 
 - **Conditional WGAN loss**: GAN에 Wasserstein 거리를 이용한 새로운 loss function 정의
 
   - $𝑥$ (짧은 발화 embedding)이 주어졌을 때, $𝐷_𝑤$와 $𝐺_𝑓$ 분포의 차이 ($𝑥$와 real sample, fake sample을 연결하여 학습)
 
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443121-047ee200-3960-11eb-85e3-d6cdb120eb2f.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443121-047ee200-3960-11eb-85e3-d6cdb120eb2f.png" alt="img"/></center>
 
-</br>
+<br/>
 
 :zap: WGAGN loss / Conditional WGAN loss 중 하나만 사용하고, 그 차이를 성능 평가 실시
 
@@ -112,15 +112,15 @@ comments: true
 
   - Real sample과 fake sample의 벡터 사이의 거리 계산을 위한 metric
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443125-05b00f00-3960-11eb-83a1-b11abcfe6840.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443125-05b00f00-3960-11eb-83a1-b11abcfe6840.png" alt="img"/></center>
 
-</br>
+<br/>
 
 - **class loss**: Multi-class cross-entropy loss
 
   - Speaker에 따른 embedding 차이를 위한 loss 정의
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443129-08126900-3960-11eb-98d6-16200989d2ff.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443129-08126900-3960-11eb-98d6-16200989d2ff.png" alt="img"/></center>
 
 > $𝑁$ : Batch size
 >
@@ -133,13 +133,13 @@ comments: true
 > $𝑊∈ℜ^(𝐷∗𝑐), 𝑏∈ℜ^𝑐$ : weight matrix, bias
 
 
-</br>
+<br/>
 
 - **Triplet loss**
 
   - Class 분류 시 error에 대한 패널티
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443133-09dc2c80-3960-11eb-882f-caf3570671b9.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443133-09dc2c80-3960-11eb-882f-caf3570671b9.png" alt="img"/></center>
 
 > $\Gamma$ : training set에서 가능한 모든 embedding의 triplet $\gamma=(𝑔_𝑎, 𝑔_𝑝, 𝑔_𝑛)$의 set
 >
@@ -152,40 +152,40 @@ comments: true
 > $\Psi∈ℜ^+$ : positive와 negative 사이의 safety margin
 
 
-</br>
+<br/>
 
 - **Center loss**
 
   - Class 내 variation 최소화
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443140-0c3e8680-3960-11eb-8896-37b5be81d367.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443140-0c3e8680-3960-11eb-8896-37b5be81d367.png" alt="img"/></center>
 
 > $𝑐_(𝑦_𝑖)$ : deep feature의 𝑦_𝑖번째 class center
 > $𝑥_𝑖$ : $𝑦_𝑖$번째 class에 속하는 𝑖번째 deep feature
 > $𝑚$ : mini-batch size
 
 
-</br>
+<br/>
 
 - **Cosine distance loss**
 
   - Generator model로 얻은 향상된 embedding과 real sample(target) 사이의 유사도를 고려
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101443144-0ea0e080-3960-11eb-8437-04997a2f26bc.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101443144-0ea0e080-3960-11eb-8437-04997a2f26bc.png" alt="img"/></center>
 
 > $\bar 𝑒$: normalized embedding
 
-</br>
+<br/>
 
 :star: <span style="background-color:#FFED81">**✔ Generator와 Discriminator의 최종 Loss**</span>
 
 - $G_f$
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101444427-d3ec7780-3962-11eb-8967-3f0ff2912fad.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101444427-d3ec7780-3962-11eb-8967-3f0ff2912fad.png" alt="img"/></center>
 
 - $D_w$
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101444430-d5b63b00-3962-11eb-97a0-807326d8a4a4.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101444430-d5b63b00-3962-11eb-97a0-807326d8a4a4.png" alt="img"/></center>
 
 
 - WGAN 훈련 후 generative model $𝐺_𝑓$ 유지
@@ -214,12 +214,12 @@ comments: true
 - Weight clipping -0.01 ~ 0.01 threshold ($𝐷_𝑤$)
 - Batch size 128
 
-</br>
+<br/>
 
 <span style="background-color:#AED6F1">**✔ 다양한 loss function의 영향 연구**</span>
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101445011-0d71b280-3964-11eb-8d77-389d6aa37ee3.png" alt="img";/></center>
-<center><img src="https://user-images.githubusercontent.com/46676700/101445016-0f3b7600-3964-11eb-94f9-767587338bcc.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101445011-0d71b280-3964-11eb-8d77-389d6aa37ee3.png" alt="img"/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101445016-0f3b7600-3964-11eb-94f9-767587338bcc.png" alt="img"/></center>
 
 <center> - FID loss은 긍정적인 영향 (v1 vs v2) </center>
 <center> - Conditional WGAN이 WGAN보다 나음 (v3 vs v4) </center>
@@ -229,21 +229,21 @@ comments: true
 <center> - Center loss은 부정적인 영향 (v6 vs v7) </center>
 <center> - Cosine loss은 긍정적 영향 (v6 vs v8) </center>
 
-</br>
+<br/>
 
 - **추가적인 training function**(softmax, cosine, triplet)이 모두 **훈련에 긍정적인** 영향을 미침
 - SV시스템에 FID, conditional WGAN은 매우 유용, 추가 조사 가치가 있음
 
-</br>
+<br/>
 
 **✔ Baseline system과 비교**
 
 - 실험 중 가장 성능이 좋았던 v3 system과 G-vector baseline system 비교
   - EER과 minDCF
 
-<center><img src="https://user-images.githubusercontent.com/46676700/101445333-a6083280-3964-11eb-86af-900deb097f6e.png" alt="img";/></center>
+<center><img src="https://user-images.githubusercontent.com/46676700/101445333-a6083280-3964-11eb-86af-900deb097f6e.png" alt="img"/></center>
 
-</br>
+<br/>
 
 - Baseline보다 짧은 duration에 대해 더 나은 성능을 보임
   - 상대적으로 EER은 4.2% 개선하였으며, minDCF는 7.2% 개선 – 1초 task에서도 상대적 EER 3.8% 향상
