modify emoji and typo

--- a/docs/review/8.md
+++ b/docs/review/8.md
@@ -14,7 +14,7 @@ comments: true
 
 <br/>
 
-### :pushpin: Abstract
+## 📌 Abstract
 
 **문제점:** Text-independent speaker verification은 짧은 발화 조건에서 심각한 성능 저하를 겪음
 **해결방법:** short embedding을 enhanced embedding에 직접 매핑하여 판별력(discriminability)을 높이도록 adversarial하게 훈련된 embedding model 제안
@@ -30,7 +30,9 @@ comments: true
 ---
 
 
-### Ⅰ. Introduction :seedling:
+## Ⅰ. Introduction 🌱
+
+<br/>
 
 - TI-SV: 등록된 화자와 테스트 음성(내용 제약 X)을 통해 화자의 신원을 검증
 - 중요한 단계: 임의의 지속시간을 갖는 음성을 고정 차원의 speaker representation으로 매핑하는 것 (acoustic feature → speaker feature)
@@ -43,13 +45,15 @@ comments: true
 ---
 
 
-### Ⅱ. Related Work :herb:
+## Ⅱ. Related Work 🌿
+
+<br/>
 
 **✔ GAN 이란**: 생성자(Generator)와 식별자(Discriminator)가 싸우면서 학습하는 모델
 - Generator : Discriminator를 속이도록 학습
 - Discriminator : real sample 𝑦와 noise 𝜂로부터 생성된 fake sample 𝑔의 차이를 학습
 
-</br>
+<br/>
 
 **✔ Adversarial Learning**
 - minmax loss function이 교대로 최적화 과정을 수행 (두 모델의 loss가 같아지는 상태가 될 때까지)
@@ -66,7 +70,9 @@ comments: true
 ---
 
 
-### Ⅲ. Proposed Approach :deciduous_tree:
+## Ⅲ. Proposed Approach 🌳
+
+<br/>
 
 - 제안하는 전급 방식은 아래의 구조와 같음
 
@@ -104,9 +110,9 @@ comments: true
 
 <br/>
 
-:zap: WGAGN loss / Conditional WGAN loss 중 하나만 사용하고, 그 차이를 성능 평가 실시
+⚡ WGAGN loss / Conditional WGAN loss 중 하나만 사용하고, 그 차이를 성능 평가 실시
 
-</br>
+<br/>
 
 - **FID loss**: Fréchet Inception Distance
 
@@ -160,8 +166,10 @@ comments: true
 
 <center><img src="https://user-images.githubusercontent.com/46676700/101443140-0c3e8680-3960-11eb-8896-37b5be81d367.png" alt="img"/></center>
 
-> $𝑐_(𝑦_𝑖)$ : deep feature의 𝑦_𝑖번째 class center
+> $𝑐_{𝑦_𝑖}$ : deep feature의 𝑦_𝑖번째 class center
+>
 > $𝑥_𝑖$ : $𝑦_𝑖$번째 class에 속하는 𝑖번째 deep feature
+>
 > $𝑚$ : mini-batch size
 
 
@@ -173,11 +181,11 @@ comments: true
 
 <center><img src="https://user-images.githubusercontent.com/46676700/101443144-0ea0e080-3960-11eb-8437-04997a2f26bc.png" alt="img"/></center>
 
-> $\bar 𝑒$: normalized embedding
+> $\bar e$: normalized embedding
 
 <br/>
 
-:star: <span style="background-color:#FFED81">**✔ Generator와 Discriminator의 최종 Loss**</span>
+⭐ <span style="background-color:#FFED81">**✔ Generator와 Discriminator의 최종 Loss**</span>
 
 - $G_f$
 
@@ -195,7 +203,9 @@ comments: true
 
 ---
 
-### Ⅳ. Experiments and Results :hibiscus:
+## Ⅳ. Experiments and Results 🌺
+
+<br/>
 
 **✔ Experimental setup**
 
@@ -254,7 +264,9 @@ comments: true
 
 ---
 
-### Ⅴ. Conclusion :sun_with_face:
+## Ⅴ. Conclusion 🌞
+
+<br/>
 
 - 본 논문에서는 **WGAN을 적용** 하여 **발화가 짧은** speaker verification application의 **향상된 embedding을 성공적으로 학습**
 - 제안된 WGAN 기반 커널 시스템 그리고 그 위에, GAN 훈련에서 **많은 loss criteria의 효과를 검증**
