modify formula in Cross Attentive Pooling review

--- a/docs/review/7.md
+++ b/docs/review/7.md
@@ -75,13 +75,12 @@ comments: true
 - 각 mini-batch에는 support(training) set $S$와 query(test) set $Q$가 포함
 - 서로 다른 화자 N명마다 M개의 발화 포함
 
-$$
+<center>
 
-S &= {(x_i, y_i)}^{N \times 1}_{i=1}, \\
-Q &= {(\tilde{x_i}, \tilde{y_i})}^{N \times (M-1)}_{i=1}
+$S = {(x_i, y_i)}^{N \times 1}_{i=1}$
 
-$$
-
+$Q = {(\tilde{x_i}, \tilde{y_i})}^{N \times (M-1)}_{i=1}$
+</center>
 > support set은 각 화자마다 1개의 발화를 사용하고, query set은 나머지 발화($2 \leq i \leq M$)를 사용
 >
 > $y, \tilde{y} \in {1, ..., N}$; class label
